some extra tweaks

--- a/contact/index.html
+++ b/contact/index.html
@@ -89,11 +89,11 @@
 							
 							<nav id="main-nav-wrap" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement">
 								<ul id="main-nav" class="main-nav tf_clearfix tf_box">
-<li class="menu-item-custom-21 menu-item menu-item-type-custom menu-item-object-custom   menu-item-home menu-item-21">
+<li class="menu-item-custom-21 menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-21">
 <a href="/">Home</a> </li>
 <li class="menu-item-page-13 menu-item menu-item-type-post_type menu-item-object-page menu-item-22">
 <a href="/about/">About</a> </li>
-<li class="menu-item-page-63 menu-item menu-item-type-post_type menu-item-object-page menu-item-67">
+<li class="menu-item-page-63 menu-item menu-item-type-post_type menu-item-object-page  page_item page-item-63  menu-item-67">
 <a href="/games/">Games</a> </li>
 <li class="menu-item-page-35 menu-item menu-item-type-post_type menu-item-object-page menu-item-41">
 <a href="/rules/">Rules</a> </li>
