--- a/games/index.html
+++ b/games/index.html
@@ -193,66 +193,78 @@
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+<td>Team Light Blue</td>
+<td>Team Grey</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+<td>Team Green</td>
+<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">22 April</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+<td>Team Grey</td>
+<td>Team Green</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">29 April</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+<td>Team Light Blue</td>
+<td>Team Green</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+<td>Team Grey</td>
+<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">6 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+<td>Team Green</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+<td>Team Light Blue</td>
+<td>Team Grey</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">13 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+<td>Team Grey</td>
+<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">20 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+<td>Team Grey</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+<td>Team Light Blue</td>
+<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">27 May</td>
