--- a/games/index.html
+++ b/games/index.html
@@ -205,14 +205,7 @@
 <td style="padding-left: 1em;" colspan="3">22 April</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team Grey</td>
-<td>Team Green</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team Light Blue</td>
-<td>Team Navy</td>
+<td style="padding-left: 1em;" colspan="3">Cancelled due to rain</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">29 April</td>
@@ -270,7 +263,14 @@
 <td style="padding-left: 1em;" colspan="3">27 May</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;" colspan="3">BYE Week</td>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team Grey</td>
+<td>Team Green</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">3 June</td>
@@ -482,22 +482,22 @@
 <tr>
 <td style="padding-left: 1em;">Green</td>
 <td>4</td>
-<td>0</td>
+<td>0.5</td>
 </tr>
-<tr style="display: none">
+<tr>
 <td style="padding-left: 1em;">Light Blue</td>
 <td>4</td>
-<td>0</td>
+<td>2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Gray</td>
 <td>4</td>
-<td>0</td>
+<td>3</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Navy</td>
 <td>4</td>
-<td>0</td>
+<td>2.5</td>
 </tr>
 </tbody>
 </table></div></div>
