--- a/games/index.html
+++ b/games/index.html
@@ -273,10 +273,22 @@
 <td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">3 June</td>
+<td style="padding-left: 1em;" colspan="3">3 June - Championship</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;" colspan="3">Championship</td>
+<td style="padding-left: 1em;">14:00</td>
+<td>Team Navy</td>
+<td>Team Light Blue</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">14:45</td>
+<td>Team Grey</td>
+<td>Team Green</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:30</td>
+<td>Winner Game 1</td>
+<td>Winner Game 2</td>
 </tr>
 </tbody>
 </table>				</div>
@@ -481,23 +493,23 @@
 <tbody>
 <tr>
 <td style="padding-left: 1em;">Green</td>
-<td>4</td>
-<td>0.5</td>
+<td>5</td>
+<td>2.5</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Light Blue</td>
-<td>4</td>
+<td>5</td>
 <td>2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Gray</td>
+<td>5</td>
 <td>4</td>
-<td>3</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Navy</td>
-<td>4</td>
-<td>2.5</td>
+<td>5</td>
+<td>3.5</td>
 </tr>
 </tbody>
 </table></div></div>
