--- a/games/index.html
+++ b/games/index.html
@@ -161,12 +161,12 @@
 			<span class="tb_tab_title">Spring Season</span>
 		</div>
 		<ul class="tab-nav tf_clearfix">
-						<li class="current" aria-expanded="true">
+			<li aria-expanded="false">
 				<a href="#tab-tb_d8mj25-0">
 										<span>Spring Season</span>
 				</a>
 			</li>
-						<li aria-expanded="false">
+			<li class="current" aria-expanded="true">
 				<a href="#tab-tb_d8mj25-1">
 										<span>Summer Season</span>
 				</a>
@@ -301,23 +301,27 @@
 <td style="padding-left: 1em;" colspan="3">24 June – Opening Day</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Light Blue</td>
+	<td>Team Green</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Light Blue</td>
+	<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">1 July</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Light Blue</td>
+	<td>Team Green</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Light Blue</td>
+	<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">8 July</td>
@@ -329,34 +333,40 @@
 <td style="padding-left: 1em;" colspan="3">15 July</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Light Blue</td>
+	<td>Team Navy</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Green</td>
+	<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">22 July</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Light Blue</td>
+	<td>Team Green</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Light Blue</td>
+	<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">29 July</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Green</td>
+	<td>Team Navy</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Light Blue</td>
+	<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">5 August</td>
@@ -493,23 +503,23 @@
 <tbody>
 <tr>
 <td style="padding-left: 1em;">Green</td>
-<td>5</td>
+<td>2</td>
 <td>2.5</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Light Blue</td>
-<td>5</td>
 <td>2</td>
+<td>1.5</td>
 </tr>
-<tr>
+<tr style="display: none;">
 <td style="padding-left: 1em;">Gray</td>
 <td>5</td>
 <td>4</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Navy</td>
-<td>5</td>
-<td>3.5</td>
+<td>2</td>
+<td>0</td>
 </tr>
 </tbody>
 </table></div></div>
