--- a/games/index.html
+++ b/games/index.html
@@ -339,8 +339,7 @@
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Green</td>
-	<td>Team Navy</td>
+	<td colspan="2">Cancelled due to rain</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">22 July</td>
@@ -354,6 +353,11 @@
 	<td style="padding-left: 1em;">15:45</td>
 	<td>Team Light Blue</td>
 	<td>Team Navy</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">16:30</td>
+	<td>Team Navy</td>
+	<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">29 July</td>
