--- a/games/index.html
+++ b/games/index.html
@@ -384,6 +384,16 @@
 <tr>
 <td style="padding-left: 1em;" colspan="3">Championship</td>
 </tr>
+<tr>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Light Blue</td>
+	<td>Team Navy</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Winner Game 1</td>
+	<td>Team Green</td>
+</tr>
 </tbody>
 </table>
 				</div>
@@ -507,13 +517,13 @@
 <tbody>
 <tr>
 <td style="padding-left: 1em;">Green</td>
-<td>2</td>
-<td>2.5</td>
+<td>6</td>
+<td>4.5</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Light Blue</td>
-<td>2</td>
-<td>1.5</td>
+<td>6</td>
+<td>3.5</td>
 </tr>
 <tr style="display: none;">
 <td style="padding-left: 1em;">Gray</td>
@@ -522,8 +532,8 @@
 </tr>
 <tr>
 <td style="padding-left: 1em;">Navy</td>
-<td>2</td>
-<td>0</td>
+<td>6</td>
+<td>1</td>
 </tr>
 </tbody>
 </table></div></div>
