--- a/games/index.html
+++ b/games/index.html
@@ -293,7 +293,7 @@
 </tbody>
 </table>				</div>
 			</div>
-					<div data-id="tab-tb_d8mj25-1" class="tab-content" aria-hidden="false">
+					<div data-id="tab-tb_d8mj25-1" class="tab-content" aria-hidden="true">
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
@@ -398,7 +398,7 @@
 </table>
 				</div>
 			</div>
-					<div data-id="tab-tb_d8mj25-2" class="tab-content" aria-hidden="true">
+					<div data-id="tab-tb_d8mj25-2" class="tab-content" aria-hidden="false">
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
@@ -406,45 +406,53 @@
 <td style="padding-left: 1em;" colspan="3">2 September – Opening Day</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Grey</td>
+	<td>Team Navy</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Green</td>
+	<td>Team Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">9 September</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Grey</td>
+	<td>Team Green</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Light Blue</td>
+	<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">16 September</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Green</td>
+	<td>Team Navy</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Grey</td>
+	<td>Team Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">23 September</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Grey</td>
+	<td>Team Navy</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Green</td>
+	<td>Team Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">30 September</td>
@@ -456,12 +464,14 @@
 <td style="padding-left: 1em;" colspan="3">7 October</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>First Game</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Light Blue</td>
+	<td>Team Navy</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Second Game</td>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team Grey</td>
+	<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">14 October</td>
@@ -517,23 +527,23 @@
 <tbody>
 <tr>
 <td style="padding-left: 1em;">Green</td>
-<td>6</td>
-<td>4.5</td>
+<td>2</td>
+<td>0</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Light Blue</td>
-<td>6</td>
-<td>3.5</td>
+<td>2</td>
+<td>1.5</td>
 </tr>
 <tr style="display: none;">
 <td style="padding-left: 1em;">Gray</td>
-<td>5</td>
-<td>4</td>
+<td>2</td>
+<td>1</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Navy</td>
-<td>6</td>
-<td>1</td>
+<td>2</td>
+<td>1.5</td>
 </tr>
 </tbody>
 </table></div></div>
