Updates championship schedule and points fall

--- a/games/index.html
+++ b/games/index.html
@@ -477,7 +477,22 @@
 <td style="padding-left: 1em;" colspan="3">14 October</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;" colspan="3">Championship</td>
+	<td style="padding-left: 1em;" colspan="3">Championship</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">14:15</td>
+	<td>Team Light Blue</td>
+	<td>Team Navy</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:15</td>
+	<td>Team Grey</td>
+	<td>Team Green</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">16:15</td>
+	<td>Winner Game 1</td>
+	<td>Winner Game 2</td>
 </tr>
 </tbody>
 </table>				</div>
@@ -527,23 +542,23 @@
 <tbody>
 <tr>
 <td style="padding-left: 1em;">Green</td>
+<td>5</td>
 <td>2</td>
-<td>0</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Light Blue</td>
-<td>2</td>
-<td>1.5</td>
+<td>5</td>
+<td>4.5</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Gray</td>
-<td>2</td>
-<td>1</td>
+<td>5</td>
+<td>3</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">Navy</td>
-<td>2</td>
-<td>1.5</td>
+<td>5</td>
+<td>0.5</td>
 </tr>
 </tbody>
 </table></div></div>
