Updates schedule for 2024

--- a/games/index.html
+++ b/games/index.html
@@ -150,7 +150,7 @@
 		    <!-- module text -->
 <div class="module module-text tb_uqkh766   " data-lazy="1">
         <div class="tb_text_wrap">
-    <h2>Schedule 2023</h2>
+    <h2>Schedule 2024</h2>
     </div>
 </div>
 <!-- /module text --><!-- module tab -->
@@ -161,7 +161,7 @@
 			<span class="tb_tab_title">Spring Season</span>
 		</div>
 		<ul class="tab-nav tf_clearfix">
-			<li aria-expanded="false">
+			<li class="current" aria-expanded="true">
 				<a href="#tab-tb_d8mj25-0">
 										<span>Spring Season</span>
 				</a>
@@ -171,7 +171,7 @@
 										<span>Summer Season</span>
 				</a>
 			</li>
-			<li class="current" aria-expanded="true">
+			<li aria-expanded="false">
 				<a href="#tab-tb_d8mj25-2">
 										<span>Fall Season </span>
 				</a>
@@ -183,107 +183,107 @@
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">25 March</td>
+<td style="padding-left: 1em;" colspan="3">20 April</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;" colspan="3">Clinic</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">15 April – Opening Day</td>
+<td style="padding-left: 1em;" colspan="3">4 May – Opening Day</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Light Blue</td>
-<td>Team Grey</td>
+<td>Team 1</td>
+<td>Team 2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Green</td>
-<td>Team Navy</td>
+<td>Team 3</td>
+<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">22 April</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;" colspan="3">Cancelled due to rain</td>
-</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">29 April</td>
+<td style="padding-left: 1em;" colspan="3">11 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Light Blue</td>
-<td>Team Green</td>
+<td>Team 1</td>
+<td>Team 2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Grey</td>
-<td>Team Navy</td>
+<td>Team 3</td>
+<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">6 May</td>
+<td style="padding-left: 1em;" colspan="3">18 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Green</td>
-<td>Team Navy</td>
+<td>Team 1</td>
+<td>Team 2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Light Blue</td>
-<td>Team Grey</td>
+<td>Team 3</td>
+<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">13 May</td>
+<td style="padding-left: 1em;" colspan="3">25 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Light Blue</td>
-<td>Team Navy</td>
+<td>Team 1</td>
+<td>Team 2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Grey</td>
-<td>Team Green</td>
+<td>Team 3</td>
+<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">20 May</td>
+<td style="padding-left: 1em;" colspan="3">1 June</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Grey</td>
-<td>Team Navy</td>
+<td>Team 1</td>
+<td>Team 2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Light Blue</td>
-<td>Team Green</td>
+<td>Team 3</td>
+<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">27 May</td>
+<td style="padding-left: 1em;" colspan="3">8 June</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Grey</td>
-<td>Team Green</td>
+<td>Team 1</td>
+<td>Team 2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Light Blue</td>
-<td>Team Navy</td>
+<td>Team 3</td>
+<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">3 June - Championship</td>
+<td style="padding-left: 1em;" colspan="3">15 June</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;" colspan="3">BYE Week</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">22 June - Championship</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">14:00</td>
-<td>Team Navy</td>
-<td>Team Light Blue</td>
+<td>Team 1</td>
+<td>Team 2</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">14:45</td>
-<td>Team Grey</td>
-<td>Team Green</td>
+<td>Team 3</td>
+<td>Team 4</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:30</td>
@@ -298,101 +298,96 @@
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">24 June – Opening Day</td>
+<td style="padding-left: 1em;" colspan="3">6 July – Opening Day</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Light Blue</td>
-	<td>Team Green</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Light Blue</td>
-	<td>Team Navy</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">1 July</td>
+<td style="padding-left: 1em;" colspan="3">13 July</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Light Blue</td>
-	<td>Team Green</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Light Blue</td>
-	<td>Team Navy</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">8 July</td>
+<td style="padding-left: 1em;" colspan="3">20 July</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">27 July</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">3 August</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">15 July</td>
+<td style="padding-left: 1em;" colspan="3">10 August</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Light Blue</td>
-	<td>Team Navy</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td colspan="2">Cancelled due to rain</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">22 July</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Light Blue</td>
-	<td>Team Green</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Light Blue</td>
-	<td>Team Navy</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">16:30</td>
-	<td>Team Navy</td>
-	<td>Team Green</td>
-</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">29 July</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Green</td>
-	<td>Team Navy</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Light Blue</td>
-	<td>Team Green</td>
-</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">5 August</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;" colspan="3">BYE Week</td>
-</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">12 August</td>
+<td style="padding-left: 1em;" colspan="3">17 August</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;" colspan="3">Championship</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Light Blue</td>
-	<td>Team Navy</td>
+	<td style="padding-left: 1em;">14:00</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:45</td>
+	<td style="padding-left: 1em;">14:45</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:30</td>
 	<td>Winner Game 1</td>
-	<td>Team Green</td>
+	<td>Winner Game 2</td>
 </tr>
 </tbody>
 </table>
@@ -403,91 +398,98 @@
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">2 September – Opening Day</td>
+<td style="padding-left: 1em;" colspan="3">31 August – Opening Day</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Grey</td>
-	<td>Team Navy</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Green</td>
-	<td>Team Light Blue</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">9 September</td>
+<td style="padding-left: 1em;" colspan="3">7 September</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Grey</td>
-	<td>Team Green</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Light Blue</td>
-	<td>Team Navy</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">16 September</td>
+<td style="padding-left: 1em;" colspan="3">14 September</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Green</td>
-	<td>Team Navy</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Grey</td>
-	<td>Team Light Blue</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">23 September</td>
+<td style="padding-left: 1em;" colspan="3">21 September</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Grey</td>
-	<td>Team Navy</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Green</td>
-	<td>Team Light Blue</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">30 September</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;" colspan="3">BYE Week</td>
-</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">7 October</td>
+<td style="padding-left: 1em;" colspan="3">28 September</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Light Blue</td>
-	<td>Team Navy</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Grey</td>
-	<td>Team Green</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">14 October</td>
+<td style="padding-left: 1em;" colspan="3">6 October</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">12 October</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;" colspan="3">Championship</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">14:15</td>
-	<td>Team Light Blue</td>
-	<td>Team Navy</td>
+	<td>Team 1</td>
+	<td>Team 2</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:15</td>
-	<td>Team Grey</td>
-	<td>Team Green</td>
+	<td>Team 3</td>
+	<td>Team 4</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">16:15</td>
