--- a/games/index.html
+++ b/games/index.html
@@ -303,8 +303,21 @@
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
+	<tr style="background-color: #e0e0e0; font-weight: bold;">
+		<td style="padding-left: 1em;" colspan="3">29 June – Opening Day</td>
+		</tr>
+		<tr>
+			<td style="padding-left: 1em;">15:00</td>
+			<td>Team 1</td>
+			<td>Team 2</td>
+		</tr>
+		<tr>
+			<td style="padding-left: 1em;">15:45</td>
+			<td>Team 3</td>
+			<td>Team 4</td>
+		</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">6 July – Opening Day</td>
+<td style="padding-left: 1em;" colspan="3">6 July</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
@@ -365,19 +378,6 @@
 <td style="padding-left: 1em;" colspan="3">10 August</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
-</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">17 August</td>
-</tr>
-<tr>
 <td style="padding-left: 1em;" colspan="3">Championship</td>
 </tr>
 <tr>
@@ -403,8 +403,21 @@
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
+	<tr style="background-color: #e0e0e0; font-weight: bold;">
+		<td style="padding-left: 1em;" colspan="3">24 August – Opening Day</td>
+		</tr>
+		<tr>
+			<td style="padding-left: 1em;">15:00</td>
+			<td>Team 1</td>
+			<td>Team 2</td>
+		</tr>
+		<tr>
+			<td style="padding-left: 1em;">15:45</td>
+			<td>Team 3</td>
+			<td>Team 4</td>
+		</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">31 August – Opening Day</td>
+<td style="padding-left: 1em;" colspan="3">31 August</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
@@ -459,14 +472,7 @@
 <td style="padding-left: 1em;" colspan="3">28 September</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+	<td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">5 October</td>
