Updates teams in spring schedule

--- a/games/index.html
+++ b/games/index.html
@@ -193,13 +193,13 @@
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+	<td>Team Green</td>
+	<td>Team Navy</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+	<td>Team Light Blue</td>
+	<td>Team Grey</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 	<td style="padding-left: 1em;" colspan="3">27 April</td>
@@ -212,26 +212,26 @@
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team 1</td>
-<td>Team 2</td>
+<td>Team Grey</td>
+<td>Team Green</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team 3</td>
-<td>Team 4</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">11 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team 1</td>
-<td>Team 2</td>
+<td>Team Light Blue</td>
+<td>Team Green</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team 3</td>
-<td>Team 4</td>
+<td>Team Grey</td>
+<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">18 May</td>
@@ -244,39 +244,39 @@
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team 1</td>
-<td>Team 2</td>
+<td>Team Green</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team 3</td>
-<td>Team 4</td>
+<td>Team Light Blue</td>
+<td>Team Grey</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">1 June</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team 1</td>
-<td>Team 2</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team 3</td>
-<td>Team 4</td>
+<td>Team Grey</td>
+<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">8 June</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team 1</td>
-<td>Team 2</td>
+<td>Team Grey</td>
+<td>Team Navy</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team 3</td>
-<td>Team 4</td>
+<td>Team Light Blue</td>
+<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">15 June - Championship</td>
