--- a/games/index.html
+++ b/games/index.html
@@ -283,13 +283,13 @@
 </tr>
 <tr>
 <td style="padding-left: 1em;">14:00</td>
-<td>Team 1</td>
-<td>Team 2</td>
+<td>Team Navy</td>
+<td>Team Grey</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">14:45</td>
-<td>Team 3</td>
-<td>Team 4</td>
+<td>Team Green</td>
+<td>Team Light Blue</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:30</td>
