--- a/games/index.html
+++ b/games/index.html
@@ -308,65 +308,65 @@
 		</tr>
 		<tr>
 			<td style="padding-left: 1em;">15:00</td>
-			<td>Team 1</td>
-			<td>Team 2</td>
+			<td>Team Light Blue</td>
+			<td>Team Green</td>
 		</tr>
 		<tr>
 			<td style="padding-left: 1em;">15:45</td>
-			<td>Team 3</td>
-			<td>Team 4</td>
+			<td>Team Light Blue</td>
+			<td>Team Grey</td>
 		</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">6 July</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+			<td>Team Green</td>
+			<td>Team Light Blue</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+			<td>Team Green</td>
+			<td>Team Grey</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">13 July</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+			<td>Team Grey</td>
+			<td>Team Light Blue</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+			<td>Team Grey</td>
+			<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">20 July</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+			<td>Team Light Blue</td>
+			<td>Team Grey</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+			<td>Team Light Blue</td>
+			<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">27 July</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+			<td>Team Green</td>
+			<td>Team Grey</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+			<td>Team Green</td>
+			<td>Team Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">3 August</td>
