--- a/games/index.html
+++ b/games/index.html
@@ -381,19 +381,14 @@
 <td style="padding-left: 1em;" colspan="3">Championship</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">14:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team Grey</td>
+	<td>Team Green</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">14:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:30</td>
+	<td style="padding-left: 1em;">16:00</td>
 	<td>Winner Game 1</td>
-	<td>Winner Game 2</td>
+	<td>Team Light Blue</td>
 </tr>
 </tbody>
 </table>
