Update games schedule fall 2024

--- a/games/index.html
+++ b/games/index.html
@@ -166,12 +166,12 @@
 										<span>Spring Season</span>
 				</a>
 			</li>
-			<li class="current" aria-expanded="true">
+			<li aria-expanded="false">
 				<a href="#tab-tb_d8mj25-1">
 										<span>Summer Season</span>
 				</a>
 			</li>
-			<li aria-expanded="false">
+			<li class="current" aria-expanded="true">
 				<a href="#tab-tb_d8mj25-2">
 										<span>Fall Season </span>
 				</a>
@@ -401,67 +401,67 @@
 	<tr style="background-color: #e0e0e0; font-weight: bold;">
 		<td style="padding-left: 1em;" colspan="3">24 August – Opening Day</td>
 		</tr>
-		<tr>
-			<td style="padding-left: 1em;">15:00</td>
-			<td>Team 1</td>
-			<td>Team 2</td>
-		</tr>
-		<tr>
-			<td style="padding-left: 1em;">15:45</td>
-			<td>Team 3</td>
-			<td>Team 4</td>
-		</tr>
+			<tr>
+				<td style="padding-left: 1em;">15:00</td>
+						<td>Team Grey</td>
+						<td>Team Light Blue</td>
+			</tr>
+			<tr>
+				<td style="padding-left: 1em;">15:45</td>
+						<td>Team Navy</td>
+						<td>Team Green</td>
+			</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">31 August</td>
 </tr>
-<tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
-</tr>
+			<tr>
+				<td style="padding-left: 1em;">15:00</td>
+						<td>Team Navy</td>
+						<td>Team Light Blue</td>
+			</tr>
+			<tr>
+				<td style="padding-left: 1em;">15:45</td>
+						<td>Team Green</td>
+						<td>Team Grey</td>
+			</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">7 September</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+	<td>Team Grey</td>
+	<td>Team Navy</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+	<td>Team Light Blue</td>
+	<td>Team Green</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">14 September</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+	<td>Team Navy</td>
+	<td>Team Green</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+	<td>Team Light Blue</td>
+	<td>Team Grey</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">21 September</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+	<td>Team Green</td>
+	<td>Team Grey</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+	<td>Team Navy</td>
+	<td>Team Light Blue</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">28 September</td>
@@ -474,13 +474,13 @@
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team 1</td>
-	<td>Team 2</td>
+	<td>Team Light Blue</td>
+	<td>Team Green</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team 3</td>
-	<td>Team 4</td>
+	<td>Team Grey</td>
+	<td>Team Navy</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">12 October</td>
