--- a/games/index.html
+++ b/games/index.html
@@ -161,7 +161,7 @@
 			<span class="tb_tab_title">Spring Season</span>
 		</div>
 		<ul class="tab-nav tf_clearfix">
-			<li aria-expanded="false">
+			<li class="current" aria-expanded="true">
 				<a href="#tab-tb_d8mj25-0">
 										<span>Spring Season</span>
 				</a>
@@ -171,125 +171,132 @@
 										<span>Summer Season</span>
 				</a>
 			</li>
-			<li class="current" aria-expanded="true">
+			<li aria-expanded="false">
 				<a href="#tab-tb_d8mj25-2">
 										<span>Fall Season </span>
 				</a>
 			</li>
 					</ul>
 
-					<div data-id="tab-tb_d8mj25-0" class="tab-content" aria-hidden="true">
+					<div data-id="tab-tb_d8mj25-0" class="tab-content" aria-hidden="false">
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">6 April</td>
+<td style="padding-left: 1em;" colspan="3">29 March</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;" colspan="3">Clinic</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-	<td style="padding-left: 1em;" colspan="3">20 April – Opening Day</td>
+	<td style="padding-left: 1em;" colspan="3">5 April – Opening Day</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Green</td>
-	<td>Team Navy</td>
+	<td>Team A</td>
+	<td>Team B</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Light Blue</td>
-	<td>Team Grey</td>
+	<td>Team C</td>
+	<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-	<td style="padding-left: 1em;" colspan="3">27 April</td>
+	<td style="padding-left: 1em;" colspan="3">12 April</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team A</td>
+	<td>Team B</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team C</td>
+	<td>Team D</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+	<td style="padding-left: 1em;" colspan="3">19 April</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:00</td>
+	<td>Team A</td>
+	<td>Team B</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;">15:45</td>
+	<td>Team C</td>
+	<td>Team D</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+	<td style="padding-left: 1em;" colspan="3">26 April</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">4 May</td>
+<td style="padding-left: 1em;" colspan="3">3 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Grey</td>
-<td>Team Green</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Light Blue</td>
-<td>Team Navy</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">11 May</td>
+<td style="padding-left: 1em;" colspan="3">10 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Light Blue</td>
-<td>Team Green</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Grey</td>
-<td>Team Navy</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">18 May</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;" colspan="3">BYE Week</td>
-</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">25 May</td>
+<td style="padding-left: 1em;" colspan="3">17 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Green</td>
-<td>Team Navy</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Light Blue</td>
-<td>Team Grey</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">1 June</td>
+<td style="padding-left: 1em;" colspan="3">24 May</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:00</td>
-<td>Team Light Blue</td>
-<td>Team Navy</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:45</td>
-<td>Team Grey</td>
-<td>Team Green</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">8 June</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team Grey</td>
-<td>Team Navy</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team Light Blue</td>
-<td>Team Green</td>
-</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">15 June - Championship</td>
+<td style="padding-left: 1em;" colspan="3">31 May - Championship</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">14:00</td>
-<td>Team Navy</td>
-<td>Team Grey</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">14:45</td>
-<td>Team Green</td>
-<td>Team Light Blue</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;">15:30</td>
@@ -304,186 +311,219 @@
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
 	<tr style="background-color: #e0e0e0; font-weight: bold;">
-		<td style="padding-left: 1em;" colspan="3">29 June – Opening Day</td>
+		<td style="padding-left: 1em;" colspan="3">14 June – Opening Day</td>
 		</tr>
 		<tr>
 			<td style="padding-left: 1em;">15:00</td>
-			<td>Team Light Blue</td>
-			<td>Team Green</td>
+			<td>Team A</td>
+			<td>Team B</td>
 		</tr>
 		<tr>
 			<td style="padding-left: 1em;">15:45</td>
-			<td>Team Light Blue</td>
-			<td>Team Grey</td>
+			<td>Team C</td>
+			<td>Team D</td>
 		</tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">6 July</td>
+<td style="padding-left: 1em;" colspan="3">21 June</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-			<td>Team Green</td>
-			<td>Team Light Blue</td>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:45</td>
-			<td>Team Green</td>
-			<td>Team Grey</td>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">13 July</td>
+<td style="padding-left: 1em;" colspan="3">28 June</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-			<td>Team Grey</td>
-			<td>Team Light Blue</td>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:45</td>
-			<td>Team Grey</td>
-			<td>Team Green</td>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">20 July</td>
+<td style="padding-left: 1em;" colspan="3">5 July</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-			<td>Team Light Blue</td>
-			<td>Team Grey</td>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:45</td>
-			<td>Team Light Blue</td>
-			<td>Team Green</td>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">27 July</td>
+<td style="padding-left: 1em;" colspan="3">12 July</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-			<td>Team Green</td>
-			<td>Team Grey</td>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:45</td>
-			<td>Team Green</td>
-			<td>Team Light Blue</td>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">3 August</td>
+<td style="padding-left: 1em;" colspan="3">26 July</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">2 August</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">10 August</td>
+<td style="padding-left: 1em;" colspan="3">9 August</td>
 </tr>
 <tr>
 <td style="padding-left: 1em;" colspan="3">Championship</td>
 </tr>
 <tr>
+	<td style="padding-left: 1em;">14:00</td>
+	<td>Team A</td>
+	<td>Team B</td>
+</tr>
+<tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Grey</td>
-	<td>Team Green</td>
+	<td>Team C</td>
+	<td>Team D</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">16:00</td>
 	<td>Winner Game 1</td>
-	<td>Team Light Blue</td>
+	<td>Winner Game 2</td>
 </tr>
 </tbody>
 </table>
 				</div>
 			</div>
-					<div data-id="tab-tb_d8mj25-2" class="tab-content" aria-hidden="false">
+					<div data-id="tab-tb_d8mj25-2" class="tab-content" aria-hidden="true">
 				<div class="tb_text_wrap">
 					<table style="width: 100%; margin-bottom: 1rem; padding: 1em; background-color: transparent; border-collapse: collapse; text-align: left;">
 <tbody>
 	<tr style="background-color: #e0e0e0; font-weight: bold;">
-		<td style="padding-left: 1em;" colspan="3">24 August – Opening Day</td>
-		</tr>
-			<tr>
-				<td style="padding-left: 1em;">15:00</td>
-						<td>Team Grey</td>
-						<td>Team Light Blue</td>
-			</tr>
-			<tr>
-				<td style="padding-left: 1em;">15:45</td>
-						<td>Team Navy</td>
-						<td>Team Green</td>
-			</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">31 August</td>
-</tr>
-			<tr>
-				<td style="padding-left: 1em;">15:00</td>
-						<td>Team Navy</td>
-						<td>Team Light Blue</td>
-			</tr>
-			<tr>
-				<td style="padding-left: 1em;">15:45</td>
-						<td>Team Green</td>
-						<td>Team Grey</td>
-			</tr>
-<tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">7 September</td>
+		<td style="padding-left: 1em;" colspan="3">23 August – Opening Day</td>
+<tr>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Grey</td>
-	<td>Team Navy</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Light Blue</td>
-	<td>Team Green</td>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">14 September</td>
+<td style="padding-left: 1em;" colspan="3">30 August</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Navy</td>
-	<td>Team Green</td>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Light Blue</td>
-	<td>Team Grey</td>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">21 September</td>
+<td style="padding-left: 1em;" colspan="3">6 September</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Green</td>
-	<td>Team Grey</td>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Navy</td>
-	<td>Team Light Blue</td>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">28 September</td>
+<td style="padding-left: 1em;" colspan="3">13 September</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">20 September</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">27 September</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">5 October</td>
+<td style="padding-left: 1em;" colspan="3">4 October</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:00</td>
-	<td>Team Light Blue</td>
-	<td>Team Green</td>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team A</td>
+<td>Team B</td>
 </tr>
 <tr>
-	<td style="padding-left: 1em;">15:45</td>
-	<td>Team Grey</td>
-	<td>Team Navy</td>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team C</td>
+<td>Team D</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">12 October</td>
+<td style="padding-left: 1em;" colspan="3">11 October</td>
+</tr>
+<tr>
+	<td style="padding-left: 1em;" colspan="3">BYE Week</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">18 October</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;" colspan="3">Championship</td>
