--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <!-- /module text --><!-- module buttons -->
 <div class="module module-buttons tb_ibzx701 buttons-horizontal solid  hide-mobile xlarge rounded tf_textl" data-lazy="1">
     	<div class="module-buttons-item tf_inline_b">
-							<a href="https://forms.gle/wNtq8DzTx11ATium7" class="ui builder_button purple" target="_blank" rel="noopener">
+							<a href="https://forms.gle/f9s3y8N5Too7Etfa6" class="ui builder_button purple" target="_blank" rel="noopener">
 											<span class="tf_inline_b tf_vmiddle">Join Us</span>
 											</a>
 			    	</div>
@@ -154,7 +154,7 @@
 <!-- module buttons -->
 <div class="module module-buttons tb_jxhz332 buttons-horizontal solid  hide-desktop hide-tablet hide-tablet_landscape xlarge rounded tf_textc" data-lazy="1">
     	<div class="module-buttons-item tf_inline_b">
-							<a href="https://forms.gle/wNtq8DzTx11ATium7" class="ui builder_button purple" target="_blank" rel="noopener">
+							<a href="https://forms.gle/f9s3y8N5Too7Etfa6" class="ui builder_button purple" target="_blank" rel="noopener">
 											<span class="tf_inline_b tf_vmiddle">Join Us</span>
 											</a>
 			    	</div>
