--- a/games/index.html
+++ b/games/index.html
@@ -395,10 +395,7 @@
 <td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">9 August</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;" colspan="3">Championship</td>
+<td style="padding-left: 1em;" colspan="3">9 August - Championship</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">14:00</td>
@@ -520,10 +517,7 @@
 	<td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">18 October</td>
-</tr>
-<tr>
-	<td style="padding-left: 1em;" colspan="3">Championship</td>
+<td style="padding-left: 1em;" colspan="3">18 October - Championship</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">14:15</td>
