--- a/games/index.html
+++ b/games/index.html
@@ -327,14 +327,7 @@
 <td style="padding-left: 1em;" colspan="3">21 June</td>
 </tr>
 <tr>
-<td style="padding-left: 1em;">15:00</td>
-<td>Team Grey</td>
-<td>Team Green</td>
-</tr>
-<tr>
-<td style="padding-left: 1em;">15:45</td>
-<td>Team Light Blue</td>
-<td>Team Navy</td>
+<td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
 <td style="padding-left: 1em;" colspan="3">28 June</td>
@@ -401,7 +394,20 @@
 <td style="padding-left: 1em;" colspan="3">BYE Week</td>
 </tr>
 <tr style="background-color: #e0e0e0; font-weight: bold;">
-<td style="padding-left: 1em;" colspan="3">9 August - Championship</td>
+<td style="padding-left: 1em;" colspan="3">9 August</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:00</td>
+<td>Team Grey</td>
+<td>Team Green</td>
+</tr>
+<tr>
+<td style="padding-left: 1em;">15:45</td>
+<td>Team Light Blue</td>
+<td>Team Navy</td>
+</tr>
+<tr style="background-color: #e0e0e0; font-weight: bold;">
+<td style="padding-left: 1em;" colspan="3">16 August - Championship</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">14:00</td>
