Adds summer championship schedule

--- a/games/index.html
+++ b/games/index.html
@@ -411,13 +411,13 @@
 </tr>
 <tr>
 	<td style="padding-left: 1em;">14:00</td>
-	<td>Team A</td>
-	<td>Team B</td>
+	<td>Light Blue</td>
+	<td>Navy</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">15:00</td>
-	<td>Team C</td>
-	<td>Team D</td>
+	<td>Grey</td>
+	<td>Green</td>
 </tr>
 <tr>
 	<td style="padding-left: 1em;">16:00</td>
